[gd_scene load_steps=9 format=3 uid="uid://cd77r01gxs0ud"]

[ext_resource type="Script" path="res://Test Character/Game.gd" id="1_a16kr"]
[ext_resource type="FontFile" uid="uid://b3yiy4ulnirtc" path="res://Test Character/TestHUD/PlayerFont.ttf" id="2_jjmwk"]
[ext_resource type="PackedScene" uid="uid://kquoyj34deus" path="res://GodotGuy/scenes/GodotGuy.tscn" id="2_qa73f"]
[ext_resource type="PackedScene" uid="uid://cx7pdgv0mhddt" path="res://Test Character/BlankStage.tscn" id="3_21y52"]
[ext_resource type="Texture2D" uid="uid://d2v6nobn25dof" path="res://Test Character/TestHUD/Player1Background.png" id="3_fnmsh"]
[ext_resource type="Texture2D" uid="uid://bxt6h5ot7vf65" path="res://Test Character/TestHUD/Player1Bar.png" id="4_7ll10"]
[ext_resource type="Texture2D" uid="uid://c2t6vti0ip1cs" path="res://Test Character/TestHUD/Player2Background.png" id="5_6q5w6"]
[ext_resource type="Texture2D" uid="uid://cefvd3dg6571h" path="res://Test Character/TestHUD/Player2Bar.png" id="6_2k3f0"]

[node name="Node3D" type="Node3D"]
script = ExtResource("1_a16kr")
player_test_one = ExtResource("2_qa73f")
player_test_two = ExtResource("2_qa73f")
scene_to_test = ExtResource("3_21y52")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.269, 7.742)
projection = 1
current = true
size = 3.5

[node name="HUD" type="CanvasLayer" parent="."]
layer = 10

[node name="Time" type="Label" parent="HUD"]
offset_left = 908.0
offset_top = 24.0
offset_right = 1013.0
offset_bottom = 107.0
theme_override_fonts/font = ExtResource("2_jjmwk")
theme_override_font_sizes/font_size = 64
text = "999"
horizontal_alignment = 1

[node name="P1Char" type="Label" parent="HUD"]
offset_top = 192.0
offset_right = 495.0
offset_bottom = 272.0
theme_override_fonts/font = ExtResource("2_jjmwk")
theme_override_font_sizes/font_size = 64
text = "Player 1 Character"

[node name="P1Inputs" type="Label" parent="HUD"]
offset_top = 272.0
offset_right = 495.0
offset_bottom = 336.0
theme_override_fonts/font = ExtResource("2_jjmwk")
theme_override_font_sizes/font_size = 24
text = "0"

[node name="P2Char" type="Label" parent="HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -495.0
offset_top = 192.0
offset_bottom = 272.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_jjmwk")
theme_override_font_sizes/font_size = 64
text = "Player 2 Character"
horizontal_alignment = 2

[node name="P2Inputs" type="Label" parent="HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -490.0
offset_top = 274.0
offset_bottom = 338.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_jjmwk")
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 2

[node name="P1Health" type="TextureProgressBar" parent="HUD"]
offset_left = 384.0
offset_right = 896.0
offset_bottom = 128.0
value = 10.0
fill_mode = 1
texture_under = ExtResource("3_fnmsh")
texture_progress = ExtResource("4_7ll10")

[node name="P2Health" type="TextureProgressBar" parent="HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -896.0
offset_right = -384.0
offset_bottom = 128.0
grow_horizontal = 0
value = 10.0
texture_under = ExtResource("5_6q5w6")
texture_progress = ExtResource("6_2k3f0")
